# indic-perf

./: BENCHMARKS_PERF.md  README.md  bench_libpfm.sh  bench_perf.sh  bench_quicksort.sh  bench_selectsort.sh  matrix.cpp  matrix_perf_event  matrix_perf_event.cpp  plots.py  pyproject.toml  quick_sort.cpp  results_bench_libpfm.txt  results_bench_perf.txt  select_sort.cpp
