[tool.poetry]
name = "matrices"
version = "0.1.0"
description = ""
authors = ["Coruscant11 <coruscant11@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
